unpackaged/main/default/objects/Meetings_Notes__c/Meetings_Notes__c.object-meta.xml
<CustomObject>
    <description>Custom object will be used to record and keep track of all meeting notes related to specific meeting</description>
    <label>Meeting Notes</label>
    <nameField>
        <displayFormat>MN-{0000}</displayFormat>
        <label>Meetings Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Notes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>