unpackaged/main/default/objects/Meetings_Notes__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <inlineHelpText>Date the meeting took place</inlineHelpText>
    <label>Meeting Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>