unpackaged/main/default/objects/Meetings_Notes__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <inlineHelpText>The purpose of this meeting</inlineHelpText>
    <label>Meeting Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly Review</fullName>
            </value>
            <value>
                <fullName>Bi monthly Review</fullName>
            </value>
            <value>
                <fullName>Quarterly Meeting</fullName>
            </value>
            <value>
                <fullName>Half Year Review</fullName>
            </value>
            <value>
                <fullName>Annual Review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>