unpackaged/main/default/objects/Meetings_Notes__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <inlineHelpText>What has been discussed</inlineHelpText>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>