unpackaged/main/default/objects/Meetings_Notes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Meeting_Date__c</columns>
    <columns>Meeting_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>